auto-test/tests/chapter_18/invalid_types/scalar_required/struct_controlling_expression.c
struct s {
  int a;
};

int main(void) {
  struct s x = {1};
  
  if (x)
    return 1;
  return 0;
}